# wp-plugins-analyzer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: client.rs
src/models/: plugin.rs
src/operations/: arbitrary_file_deletion_operation.rs  arbitrary_file_read_operation.rs  arbitrary_file_upload_operation.rs  broken_access_control_operation.rs  common.rs  csrf_operation.rs  csrf_to_xss_operation.rs  lfi_operation.rs  missing_capability_operation.rs  operation.rs  php_object_injection.rs  privilege_escalation_operation.rs  rce_operation.rs  sqli_operation.rs  ssrf_operation.rs
src/utils/: comparator.rs
