[package]
name = "wp-plugins-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
zip = "2.0.0"
tree-sitter = "0.22.6"
tree-sitter-php = "0.22.5"
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
regex = "1.10.4"
